# Dir2md

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  README.md  SECURITY.md  SPICY_REVIEW_SUPREME_20251216.md  app.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
demo/: README.md  README1.md  app.py  requirements.txt
docs/: CLI_REFERENCE.md  FEATURES.md  INTEGRATION_PLAN.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  Wiki.md
scripts/: bench_dir2md.py
src/dir2md/: __init__.py  cli.py  core.py  defaults.json  gitignore.py  license.py  manifest.py  markdown.py  masking.py  orchestrator.py  parallel.py  renderer.py  search.py  selector.py  simhash.py  spicy.py  summary.py  token.py  walker.py
src/dir2md/compressors/: __init__.py  gravitas.py
src/dir2md/query/: __init__.py  corrector.py  expander.py  suggester.py
src/dir2md/samplers/: __init__.py  semantic.py
tests/: test_cli_defaults.py  test_dir2md.py  test_masking.py  test_search.py  test_spicy.py  test_token.py
